--- a/JavaScript/Objetos e Orientação a Objetos/Projeto Luta/assets/css/style.css
+++ b/JavaScript/Objetos e Orientação a Objetos/Projeto Luta/assets/css/style.css
@@ -2,33 +2,62 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+body {
+  padding: 20px;
+}
+
+.attackButton {
+  margin: 10px 0;
+  border: 0;
+  background-color: black;
+  color: #fff;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;  
 }
 
 .fightarea {
   display: flex;
   gap: 20px;
+  flex-direction: column;
 }
 
 #char,
 #monster {
-  flex: 1;
+  width: 50%;
+  margin: 5px 0;
 }
 
 .lifebar {
-  height: 10px;
+  height: 15px;
   border: 1px solid #333;
   border-radius: 5px;
+  margin-bottom: 8px;
 }
 
 .lifebar .bar {
   height: inherit;
-  background-color: red;
+  background-color: green;
   border-radius: 5px;
   width: 10%;
 }
 
 .log {
-  border: 1px solid #999;
-  height: 200px;
+  border-radius: 8px;
+  padding: 20px;
+  margin-top: 30px;
+  border: 1px solid #FFF;
+  height: 300px;
   overflow-y: scroll;
+  background-color: black;
+  color: #fff;
+}
+
+.log li {
+  list-style: none;
+  margin-bottom: 5px;
 }
